# create-conda

./: README.md  README.rst  pyproject.toml
src/create_conda/: cli.py  plugin.py
tests/: test_create_conda.py
